# BMS_onMCU_BLE

./: .gitignore  BLE_Advanced_Troubleshooting.md  BLE_Permission_Fix_Guide.md  Doxyfile_BMS  FINAL_BLE_FIX.md  Jenkinsfile  README.md  TARGETED_BLE_FIX.md  requirements.txt
BMS_PSOC63/: .gitignore  BMS_PSOC63.code-workspace  Makefile  README.md  common.mk  common_app.mk
BMS_PSOC63/BSP/: BSP.c  BSP.h  test_BSP.c  test_BSP.py
BMS_PSOC63/bsps/TARGET_APP_CY8CPROTO-063-BLE/BSP/: BSP.c  BSP.h  test_BSP.py
BMS_PSOC63/bsps/TARGET_APP_CY8CPROTO-063-BLE/COMPONENT_CM0P/TOOLCHAIN_GCC_ARM/: linker.ld
BMS_PSOC63/bsps/TARGET_APP_CY8CPROTO-063-BLE/COMPONENT_CM4/TOOLCHAIN_GCC_ARM/: linker.ld  startup_psoc6_01_cm4.S
BMS_PSOC63/bsps/TARGET_APP_CY8CPROTO-063-BLE/config/: design.modus
BMS_PSOC63/bsps/TARGET_APP_CY8CPROTO-063-BLE/config/GeneratedSource/: cycfg.c  cycfg.h  cycfg.timestamp  cycfg_capsense_defines.h  cycfg_clocks.c  cycfg_clocks.h  cycfg_notices.h  cycfg_peripherals.c  cycfg_peripherals.h  cycfg_pins.c  cycfg_pins.h  cycfg_routing.c  cycfg_routing.h  cycfg_system.c  cycfg_system.h
BMS_PSOC63/proj_cm0p/: Makefile  main.c
BMS_PSOC63/proj_cm0p/libs/: app.mk
BMS_PSOC63/proj_cm4/: Makefile  design.cybt  main.c
BMS_PSOC63/proj_cm4/GeneratedSource/: cycfg_bt.timestamp  cycfg_bt_settings.c  cycfg_bt_settings.h  cycfg_gap.c  cycfg_gap.h  cycfg_gatt_db.c  cycfg_gatt_db.h
BMS_PSOC63/proj_cm4/libs/: app.mk  mtb.mk
BMS_PSOC63/proj_cm4/qspy/: qutest.c
BMS_PSOC63/proj_cm4/qspyHelper/: qspyHelper.c  qspyHelper.h
BMS_PSOC63/source/BSP/: BSP.c  BSP.h  test_BSP.c  test_BSP.py
BMS_PSOC63/source/CM0p/: main.c
BMS_PSOC63/source/CM4/: main.c
BMS_PSOC63/source/CM4/ADC/: ADC.c  ADC.h
BMS_PSOC63/source/CM4/BLE/: AIOService.c  AIOService.h  BLE.c  BLE.h  BatteryService.c  BatteryService.h
BMS_PSOC63/source/CM4/LP/: LP.c  LP.h
BMS_PSOC63/source/CM4/main/: FreeRTOSConfig.h  MAIN.h  bms_events.h  main.c  test_main.py
BMS_PSOC63/source/CM4/qspy/: qp_port.h  qs.c  qs.h  qs_rx.c  qutest.c
BMS_PSOC63/source/CM4/qspyHelper/: qspyHelper.c  qspyHelper.h  test_qspyHelper.py
BMS_PSOC63/source/CM4/qutestHelper/: qutestHelper.c  qutestHelper.h
CI-CD/: README_CI-CD.md
Integration_Tests/: close_qspy.sh  conftest.py  run_ITs.sh  run_ITs_QN9080.sh  run_ITs_qspy.sh  start_qspy.sh  test_ADC_meas.py  test_BLE_AIOS.py  test_BLE_BAS.py  test_BLE_connect.py  test_BLE_scan.py  testfixture_general.py  testfixture_qspy.py
QN908x/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  QN908x.code-workspace  arm-none-eabi-gcc.cmake  qn908xcdk_wireless_BMS.mex  test_main.c
QN908x/BLE_qn9080/: BLE_qn9080.c  BLE_qn9080.h  ble_stubs.c  ble_stubs_fixed.c  gatt_db.h  gatt_db_app.c  gatt_db_handles_simple.h  gatt_uuid128.h  gatt_uuid128_defs.c
QN908x/BLE_qn9080/gatt_db/: gatt_database.c
QN908x/BSP/: rco32k_calibration.h
QN908x/CMSIS/: cmsis_gcc.h
QN908x/bluetooth/controller/interface/: controller_config.c
QN908x/bluetooth/host/config/: ble_globals.c
QN908x/bluetooth/host/interface/: ble_sig_defines.h
QN908x/board/: clock_config.c  clock_config.h  fw_symbols_gcc.h  pin_mux.c  pin_mux.h  rco32k_calibration.c
QN908x/drivers/: fsl_common.h
QN908x/framework/GPIO/: GPIO_Adapter.c
QN908x/framework/LED/Source/: LED.c
QN908x/framework/ModuleInfo/: ModuleInfo.c
QN908x/framework/OSAbstraction/Interface/: fsl_os_abstraction.h  fsl_os_abstraction_config.h
QN908x/framework/OSAbstraction/Source/: fsl_os_abstraction_free_rtos.c
QN908x/framework/SecLib/: SecLib.c  SecLib.h
QN908x/freertos/: ChangeLogKSDK.txt
QN908x/startup/: qn908x.ld  startup_qn908x.S
QN908x/utilities/: fsl_debug_console.c
bms_app/: .metadata  BUILD_README.md  build_all.sh  build_android.sh  build_linux.sh  install_android.sh  pubspec.yaml  run_linux.sh  status.sh
bms_app/android/app/: build.gradle.kts
bms_app/lib/: main.dart
bms_app/lib/models/: battery_data.dart  ble_constants.dart  bms_device.dart
bms_app/lib/screens/: debug_screen.dart  device_details_screen.dart  scan_screen.dart  simple_scanner.dart
bms_app/lib/services/: ble_service.dart
bms_app/lib/utils/: ble_debug.dart  permissions.dart  targeted_permissions.dart  utils.dart
bms_app/lib/widgets/: battery_gauge.dart
bms_app/linux/runner/: my_application.cc
bms_app/test/: widget_test.dart
qutest/: get_coverage_data.py  qspy  qutest.py  qutest_dsl.py  run_BSP_test.sh  run_qspy.sh  run_qspyHelper_test.sh  run_qview.sh  run_tests.sh  show_comPorts.sh
qutest/qview/: BMS.py  qview.py
source/ADC/: ADC.c  ADC.h
source/BLE/: AIOService.c  AIOService.h  BLE.c  BLE.h  BatteryService.c  BatteryService.h
source/CM0p/: FreeRTOSConfig.h  main.c
source/CM4/BLE/: AIOService.h  BLE.c
source/CM4/main/: bms_events.h  test_main.py
source/CM4/qutestHelper/: qutestHelper.h
source/HAL/PSOC63/hal/: hal.c  hal.h
source/HAL/PSOC63/hal_adc/: hal_adc.c  hal_adc.h
source/HAL/PSOC63/hal_ble/: hal_ble.c  hal_ble.h
source/HAL/PSOC63/hal_gpio/: hal_gpio.c  hal_gpio.h
source/HAL/PSOC63/hal_led/: hal_led.c  hal_led.h
source/HAL/PSOC63/hal_nvm/: hal_nvm.h
source/HAL/PSOC63/hal_time/: hal_time.c  hal_time.h
source/HAL/PSOC63/hal_uart/: hal_uart.c  hal_uart.h
source/HAL/QN9080/hal/: hal.c  hal.h
source/HAL/QN9080/hal_adc/: hal_adc.c  hal_adc.h
source/HAL/QN9080/hal_ble/: hal_ble.c  hal_ble.h
source/HAL/QN9080/hal_eeprom/: hal_eeprom.c  hal_eeprom.h
source/HAL/QN9080/hal_gpio/: hal_gpio.c  hal_gpio.h
source/HAL/QN9080/hal_led/: hal_led.c  hal_led.h
source/HAL/QN9080/hal_nvm/: hal_nvm.h
source/HAL/QN9080/hal_time/: hal_time.c  hal_time.h
source/HAL/QN9080/hal_uart/: hal_uart.c  hal_uart.h
source/LP/: LP.c  LP.h
source/OSAL/PSOC63/: FreeRTOSConfig.h  OSAL.h  osal_irq_prio.h  osal_task_config.h
source/OSAL/QN9080/: FreeRTOSConfig.h  OSAL.h  osal_irq_prio.h  osal_task_config.h
source/main/: FreeRTOSConfig.h  MAIN.h  app_preinclude.h  bms_events.h  main.c
source/qspy/: qs.c  qs.h  qs_rx.c  qsafe.h
source/qspyHelper/: qspyHelper.c  qspyHelper.h
source/qutestHelper/: qutestHelper.c  qutestHelper.h
(+3 files in other folders)
